added my own card for contribution

--- a/index.html
+++ b/index.html
@@ -1105,6 +1105,36 @@
         </div>
         <!-- ________ yzyeoh's card END ________  -->
 
+      <!-- ________ Dominik card START ________  -->
+      <div class="card">
+        <p class="name">Dominik</p>
+        <p class="contact">
+          <i class="fab fa-linkedin"></i>
+          <a href="https://www.linkedin.com/in/dominik-palo/" target="_blank">Dominik Palo</a>
+        </p>
+        <p class="about">Computer Science Student</p>
+        <div class="resources">
+          <p>3 Useful Dev Resources</p>
+          <ul>
+            <li>
+              <a href="https://github.com/sindresorhus/awesome" target="_blank" title="First Resource">
+                GitHub Awesome List
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/achristmascarl/rainfrog" target="_blank" title="Second Resource">
+                DB Management UI tool - rainfrog
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/tensorflow/tensorflow" target="_blank" title="Third resource">
+                Open Source Deep Learning Framework - Tensorflow
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- ________ yzyeoh's card END ________  -->
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Anal joseph</p>
