fixing the footer of the card

--- a/index.html
+++ b/index.html
@@ -1105,7 +1105,7 @@
         </div>
         <!-- ________ yzyeoh's card END ________  -->
 
-      <!-- ________ Dominik card START ________  -->
+      <!-- ________ Dominik's card START ________  -->
       <div class="card">
         <p class="name">Dominik</p>
         <p class="contact">
@@ -1134,7 +1134,7 @@
           </ul>
         </div>
       </div>
-      <!-- ________ yzyeoh's card END ________  -->
+      <!-- ________ Dominik's card END ________  -->
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Anal joseph</p>
