Add apoorva-as card info

--- a/index.html
+++ b/index.html
@@ -88,6 +88,34 @@
         <!-- ==================  TEMPLATE  ================== -->
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
 
+        <!--________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Apoorva Asati</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/i/flow/login?redirect_after_login=%2FApoorvaAsa15605" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/apoorva-as?tab=repositories" target="_blank">Your handle</a>
+          </p>
+          <p class="about">new to the world of open-source contribution </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@sheryians" target="_blank" title="best channel to lear webdev in onshort vedios">Resource 1</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@harkirat1" target="_blank" title="best channel to learn backend ">Resource 2</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/results?search_query=chai+aur+code+javascript" target="_blank" title="best channel for depth and clear learning ">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Your name</p>
