--- a/index.html
+++ b/index.html
@@ -3153,6 +3153,34 @@
           </div>
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
+         <!-- ________ Abhishek Das Card START ________  -->
+        <div class="card">
+          <p class="name">Abhishek Das</p>
+          <p class="contact">
+            <i class="fab fa-instagram"></i>
+            <a href="https://www.instagram.com/23oldspice/?utm_source=qr&igsh=b2o0Y3VvZGhjNGVo#" target="_blank">23oldspice</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/dasatccu" target="_blank">Abhishek Das</a>
+          </p>
+          <p class="about">
+            Hi! I am a software developer and I am eager to contribute to open-source
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank" title="First Resource">YouTube, duh</a>
+              </li>
+              <li>
+                <a href="https://www.udemy.com/" target="_blank" title="Second Resource">Udemy</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Third resource">GeeksforGeeks</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Abhishek Das card END ________  -->
 
         <!-- ========= END ========= -->
 
