This is my contribution for the project.

--- a/index.html
+++ b/index.html
@@ -3154,6 +3154,43 @@
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
+        <!-- ________ makur123 card START ________  -->
+        <div class="card">
+          <p class="name">Makur Dhuor</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://github.com/Makur123" target="_blank">Makur123 </a>
+            <i class="fab fa-github"></i>
+            <a href="https://x.com/dhuor_makur" target="_blank">@dhuor_makur</a>
+          </p>
+          <p class="about">A Computer Science Student at RKMVC College,India, eager to contribute to open-source projects.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://stackoverflow.com/questions/40307960/how-to-create-a-branch-in-github" target="_blank" title="Stackoverflow">
+                  Stackoverflow
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.geeksforgeeks.org/"
+                  target="_blank"
+                  title="GeeksforGeeks"
+                >
+                 GeeksforGeeks
+                </a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@cs50" target="_blank" title="CS50's Youtube Channel">
+                  CS50's Youtube Channel
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ makur123 card END ________  -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
