Add tfnov2k card info

--- a/index.html
+++ b/index.html
@@ -3117,6 +3117,31 @@
         </div>
         <!-- ========= CattusX Card END =========  -->
 
+        <!-- ________ tfnov2k card START ________  -->
+        <div class="card">
+          <p class="name">Yeet</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/tfnov2k" target="_blank">tfnov2k</a>
+          </p>
+          <p class="about">Software Developer looking to contribute to open-source projects.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/channel/UCZCFT11CWBi3MHNlGf019nw" target="_blank" title="Abdul Bari">Abdul Bari's YT videos on Data Structures and Algorithms</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@TheCodingTrain" target="_blank" title="The Coding Train">The Coding Train's YT videos</a>
+              </li>
+              <li>
+                <a href="https://adventofcode.com/" target="_blank" title="Advent of Code">Advent of Code challenges</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ tfnov2k card END ________  -->
+
         <!-- ________ aarifkhan7 card START ________  -->
         <div class="card">
           <p class="name">Aarif Khan</p>
