Add JonathanRosh card info

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Yonatan Rosh</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/yonatan-rosh-299244232/" target="_blank">Yonatan Rosh</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/JonathanRosh" target="_blank">JonatanRosh</a>
+          </p>
+          <p class="about">Hi there, Im a 3rd year Math & CS student at Tel Aviv University, learning fullstack development from the internet. Im eager to start contribute to other projects as well so i will improve my developer skills. Thank you for this project! </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/?couponCode=ST13MT80425G2" target="_blank" title="Web Dev Bootcamp">Angela Yu's Web Dev Bootcamp On Udemy </a>
+              </li>
+              <li>
+                <a href="https://www.udemy.com/course/the-complete-javascript-course/?couponCode=ST13MT80425G2" target="_blank" title="JS Tutorial">Jonas Schmedtmann JavaScript Tutorial</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3Schools">W3Schools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
