Add ASHarish001 card info

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+
         <div class="card">
           <p class="name">Your name</p>
           <p class="contact">
@@ -113,7 +114,33 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        
+        <!-- ________ ASHarish001 card START ________  -->
+        <div class="card">
+          <p class="name">A S Harish Kumar</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/ASHARISH001" target="_blank">ASHARISH001</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/ASHarish001" target="_blank">ASHarish001</a>
+          </p>
+          <p class="about">I’m A S Harish Kumar — an aspiring backend developer with a growing passion for building efficient, scalable server-side applications.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://udemy.com" target="_blank" title="Udemy">Udemy</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@BroCodez" target="_blank" title="Bro Code">Bro Code</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@TAPACADEMY" target="_blank" title="Tap Academy">Tap Academy</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ ASHarish001 card END ________  -->
 
         <!-- ________ unimaria card START ________  -->
         <div class="card">
