Add contributor card for Arpit Dubey

--- a/index.html
+++ b/index.html
@@ -115,6 +115,37 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Arpit Dubey</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin-in"></i>
+            <a href="https://www.linkedin.com/in/arpit-dubey-a14347253/" target="_blank">Arpit Dubey</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Arpit1033" target="_blank">Arpit1033</a>
+          </p>
+          <p class="about">
+            Hello everyone. I am Arpit Dubey, a 3rd-year B.Tech student at the Indian Institute of Information Technology, Lucknow (IIITL).
+            I am passionate about coding and learning new things. I have made some personal projects in Django. Alongwith it, I also do competitive
+            programming on Codeforces and Codechef.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="MDN Web Docs">MDN Web Docs</a>
+              </li>
+              <li>
+                <a href="https://docs.djangoproject.com/en/5.2/" target="_blank" title="Django Documentation">Django Documentation</a>
+              </li>
+              <li>
+                <a href="https://github.com/" target="_blank" title="Github">GitHub</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
