--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <!-- ==================  TEMPLATE  ================== -->
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
 
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Your name</p>
@@ -114,6 +115,35 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        
+	<!-- ________ sujeetv card starts __________ -->
+
+        <div class="card">
+          <p class="name">sujeetv</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/kunalstwt?lang=en" target="_blank">kunal kushwaha</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/sujeetv-125" target="_blank">sujeetv</a>
+          </p>
+          <p class="about">i am current college student styding in a new government engineering college and interested in computer science field </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/Syknapse/Contribute-To-This-Project/blob/master/terminal_tutorial.md" target="_blank" title="your resource">Resource 1</a>
+              </li>
+              <li>
+                <a href="https://github.com/sujeetv-125/Contribute-To-This-Project" target="_blank" title="S1 Resource">Resource 2</a>
+              </li>
+              <li>
+                <a href="https://github.com/sujeetv-125/codsoft_task-1-landing-page" target="_blank" title="s2resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Sujeet Contributor card END ________  -->
+
 
         <!-- ________ unimaria card START ________  -->
         <div class="card">
