haha some work done

--- a/index.html
+++ b/index.html
@@ -114,7 +114,40 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
-
+        <!-- ________ Bhagwan card START ________  -->
+        <div class="card">
+          <p class="name">Bhagwan</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/bhagwan_chohan?t=OqkCod0ozRguwoY1Ba-VTA&s=09" target="_blank">bhagwan_chohan</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/RealFalseGod" target="_blank">RealFalseGod</a>
+          </p>
+          <p class="about">
+            Hey, I am Bhagwansingh, and very much intereseted in Quantum computing and Ai.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.khanacademy.org/computing/computer-programming" target="_blank" title="Khanacademy - Great knowledge base">Khan Academy</a>
+              </li>
+              <li>
+                <a href="https://www.apnacollege.in" target="_blank" title="Apna Collage">Apna College</a>
+              </li>
+              <li>
+                <a
+                  href="https://www.youtube.com/watch?v=pKO9UjSeLew&ab_channel=JomaTech"
+                  target="_blank"
+                  title="If Programming was An Anime"
+                >
+                If Programming was An Anime
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Bhagwan card END ________  -->
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
