--- a/index.html
+++ b/index.html
@@ -3152,6 +3152,40 @@
             </ul>
           </div>
         </div>
+        <div class="card">
+          <p class="name">Emmanuel Ofoneta</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/lord_maryo" target="_blank">@LordMaryo</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/lordMaryo" target="_blank">@LordMaryo</a>
+          </p>
+          <p class="about">Software Engineer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/ossu/freecodecamp" target="_blank" title="Free code camp">
+                  Freecodecamp
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://github.com/EbookFoundation/free-programming-books"
+                  target="_blank"
+                  title="Free Programming Books"
+                >
+                  Free Programming Books
+                </a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@cs50" target="_blank" title="CS50's Youtube Channel">
+                  CS50's Youtube Channel
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
         <!-- ========= END ========= -->
