--- a/index.html
+++ b/index.html
@@ -115,6 +115,37 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+
+
+
+
+        <!-- ________ ADITYA's card START ________  -->
+        <div class="card">
+          <p class="name">Aditya joshi</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin-in"></i>
+            <a href="www.linkedin.com/in/aditya-joshi-115a6b308" target="_blank"> Adityajoshi</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Aditya44234" target="_blank"> Aditya44234</a>
+          </p>
+          <p class="about">Hello everyone,My name is Aditya and i'm so excited to contribute for the first time.I am currently mastering DSA and full stack Dev,Thanks to Syknapse for giving this golden opportunity.Sharing the best resources for Developers.Bye🐦‍🔥  </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.geeksforgeeks.org" target="_blank" title="Best coding platform">GeeksforGeeks </a>
+              </li>
+              <li>
+                <a href="https://youtu.be/rZ41y93P2Qo?feature=shared" target="_blank" title="Learn java with DSA efficiently">Kunal Kushwaha</a>
+              </li>
+              <li>
+                <a href="https://youtu.be/Ez8F0nW6S-w?feature=shared" target="_blank" title="Learn any Software tech">Apna collge</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+          <!-- ________ Aditya card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
