--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ MbeAlexPFS card START ________  -->
+        <div class="card">
+          <p class="name">Mbe Alex</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/alexmbepfs" target="_blank">alexmbepfs</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/MbeAlexPFS" target="_blank">MbeAlexPFS</a>
+          </p>
+          <p class="about">Hello everyone, my name is Alex. I am currently an application development student. I like to make programs and video games. My dream is to be a professional in full stack development.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://stackoverflow.com" target="_blank" title="First Resource">stackoverflow</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com" target="_blank" title="Second Resource">w3schools</a>
+              </li>
+              <li>
+                <a href="https://openclassrooms.com" target="_blank" title="Third resource">openclassrooms</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ MbeAlexPFS card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
