--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________serenequacked card START ________-->
+                <div class="card">
+                  <p class="name">Serene</p>
+                  <p class="contact">
+                    <i class="fab fa-github"></i>
+                    <a href="https://github.com/serenequacked" target="_blank">serenequacked</a>
+                  </p>
+                  <p class="about">
+                    Hello! This is Serene, I want to make a habit of coding more and contributing to something 
+                    a project bigger than me. Who knows where this journey will take me! 
+                  </p>
+                  <div class="resources">
+                    <p>3 Useful Dev Resources</p>
+                    <ul>
+                      <li>
+                        <a href="https://www.youtube.com/@kevinfaang" target="_blank" title="First Resource">Kevin Faang Youtube! what to do and what not to do, cautionary tales for devs all over</a>
+                      </li>
+                      <li>
+                        <a href="https://refactoring.guru/design-patterns" target="_blank" title="Second Resource">Software Design Patterns</a>
+                      </li>
+                      <li>
+                        <a href="https://www.youtube.com/@t3dotgg" target="_blank" title="Third resource">Youtube channel by a dev for devs</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+        <!-- ________ serenequacked card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
