--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Kecalek13 card START ________  -->
+        <div class="card">
+          <p class="name">Kecalek13</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="#" target="_blank">I don't use it</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/kecalek13" target="_blank">kecalek13</a>
+          </p>
+          <p class="about">Hello, I'm Kecalek13! I'm hobby programmer I like to learn new things. I use programming languages like Python, Java, C++ and more... And by the way this is my first contribution ever.	&#128513;</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.itnetwork.cz/" target="_blank" title="First Resource">ITNetwork (But in Czech Language)</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Second Resource">Free Code Camp</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Third resource">W3Schools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Kecalek13 card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
