--- a/index.html
+++ b/index.html
@@ -89,25 +89,28 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Your name</p>
+          <p class="name">Ned111m</p>
           <p class="contact">
-            <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com" target="_blank">Your handle</a>
+          <i class="fab fa-linkedin"></i>
+          <a href="https://www.linkedin.com/in/nedim-ba%C5%A1i%C4%87-5608b6239/" target="_blank">Nedim Basic</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com" target="_blank">Your handle</a>
+            <a href="https://github.com/Ned111m" target="_blank">Ned111m</a>
           </p>
-          <p class="about">about you</p>
+          <p class="about">I like sweets, cats & doing tech stuff.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="https://github.com/fmhy/FMHY" target="_blank" title="First Resource">FMHY is a community-maintained, privacy-focused resource hub for free and open-access media tools, streaming sites,
+                software alternatives, and piracy-related guides.</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="https://roadmap.sh/" target="_blank" title="Second Resource">roadmap.sh is a community effort to create roadmaps, guides and other educational content to help guide developers in
+                picking up a path and guide their learnings.</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="https://github.com/codecrafters-io/build-your-own-x" target="_blank" title="Third resource">This repository is a compilation of well-written, step-by-step guides for re-creating our favorite technologies from
+                scratch.</a>
               </li>
             </ul>
           </div>
