added Eyureaper-card to index

--- a/index.html
+++ b/index.html
@@ -114,7 +114,36 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+         <!-- ________ EyuReaper card START ________  -->
+        <div class="card">
+          <p class="name">EyuReaper</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/FrontbyEyuel" target="_blank">FrontbyEyuel</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/EyuReaper" target="_blank">EyuReaper</a>
+          </p>
+          <p class="about">
+            I'm a passionate front-end developer with a keen eye for design and a deep understanding of modern web technologies.  I'm driven to create digital experiences that not only look stunning but also provide seamless functionality. Ps. am looking to get hired make sure to hitme up.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://devdocs.io" target="_blank" title="best for reference">DevDocs</a>
+              </li>
+              <li>
+                <a href="https://codepen.io/trending" target="_blank" title="best for prototyping">Codepen</a>
+              </li>
+              <li>
+                <a href="https://uiverse.io" target="_blank" title="best ui library">uiverse</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ EyuReaper card END ________  -->
 
+        
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
