--- a/index.html
+++ b/index.html
@@ -3154,6 +3154,41 @@
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
+        <!-- ________ mezeitamas08 card START ________  -->
+        <div class="card">
+          <p class="name">Tamás Mezei</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/mezeitamas08" target="_blank">@mezeitamas08</a>
+          </p>
+          <p class="about">Fullstack developer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3Schools">
+                  W3Schools
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://chatgpt.com"
+                  target="_blank"
+                  title="ChatGPT"
+                >
+                  ChatGPT
+                </a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="MDN Web Docs">
+                  MDN Web Docs
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ mezeitamas08 card END ________  -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
