Add my card information

--- a/index.html
+++ b/index.html
@@ -88,33 +88,30 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
-        <div class="card">
-          <p class="name">Ned111m</p>
-          <p class="contact">
-          <i class="fab fa-linkedin"></i>
-          <a href="https://www.linkedin.com/in/nedim-ba%C5%A1i%C4%87-5608b6239/" target="_blank">Nedim Basic</a>
-            <i class="fab fa-github"></i>
-            <a href="https://github.com/Ned111m" target="_blank">Ned111m</a>
-          </p>
-          <p class="about">I like sweets, cats & doing tech stuff.</p>
-          <div class="resources">
-            <p>3 Useful Dev Resources</p>
-            <ul>
-              <li>
-                <a href="https://github.com/fmhy/FMHY" target="_blank" title="First Resource">FMHY is a community-maintained, privacy-focused resource hub for free and open-access media tools, streaming sites,
-                software alternatives, and piracy-related guides.</a>
-              </li>
-              <li>
-                <a href="https://roadmap.sh/" target="_blank" title="Second Resource">roadmap.sh is a community effort to create roadmaps, guides and other educational content to help guide developers in
-                picking up a path and guide their learnings.</a>
-              </li>
-              <li>
-                <a href="https://github.com/codecrafters-io/build-your-own-x" target="_blank" title="Third resource">This repository is a compilation of well-written, step-by-step guides for re-creating our favorite technologies from
-                scratch.</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+<div class="card">
+  <p class="name">Your name</p>
+  <p class="contact">
+    <i class="fab fa-x-twitter"></i>
+    <a href="https://www.twitter.com" target="_blank">Your handle</a>
+    <i class="fab fa-github"></i>
+    <a href="https://www.github.com" target="_blank">Your handle</a>
+  </p>
+  <p class="about">about you</p>
+  <div class="resources">
+    <p>3 Useful Dev Resources</p>
+    <ul>
+      <li>
+        <a href="#" target="_blank" title="First Resource">Resource 1</a>
+      </li>
+      <li>
+        <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+      </li>
+      <li>
+        <a href="#" target="_blank" title="Third resource">Resource 3</a>
+      </li>
+    </ul>
+  </div>
+</div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
         <!-- COPY everything ABOVE this, from contributor card start to end along with the "START" and "END" comment lines -->
@@ -124,32 +121,39 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
-<!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
-        <div class="card">
-          <p class="name">Your name</p>
-          <p class="contact">
-            <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com" target="_blank">Your handle</a>
-            <i class="fab fa-github"></i>
-            <a href="https://www.github.com" target="_blank">Your handle</a>
-          </p>
-          <p class="about">about you</p>
-          <div class="resources">
-            <p>3 Useful Dev Resources</p>
-            <ul>
-              <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
-              </li>
-              <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
-              </li>
-              <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+              <!-- ________ Ned111m card START ________  -->
+              <div class="card">
+                <p class="name">Ned111m</p>
+                <p class="contact">
+                  <i class="fa-brands fa-linkedin"></i>
+                  <a href="https://www.linkedin.com/in/nedim-ba%C5%A1i%C4%87-5608b6239/" target="_blank">Nedim Basic</a>
+                  <i class="fa-brands fa-github"></i>
+                  <a href="https://github.com/Ned111m" target="_blank">Ned111m</a>
+                </p>
+                <p class="about">I like sweets, cats & doing tech stuff.</p>
+                <div class="resources">
+                  <p>3 Useful Dev Resources</p>
+                  <ul>
+                    <li>
+                      <a href="https://github.com/fmhy/FMHY" target="_blank" title="First Resource">FMHY is a community-maintained,
+                        privacy-focused resource hub for free and open-access media tools, streaming sites,
+                        software alternatives, and piracy-related guides.</a>
+                    </li>
+                    <li>
+                      <a href="https://roadmap.sh/" target="_blank" title="Second Resource">roadmap.sh is a community effort to create
+                        roadmaps, guides and other educational content to help guide developers in
+                        picking up a path and guide their learnings.</a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/codecrafters-io/build-your-own-x" target="_blank" title="Third resource">This
+                        repository is a compilation of well-written, step-by-step guides for re-creating our favorite technologies
+                        from
+                        scratch.</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            <!-- ________ Ned111m card END ________  -->
         <!-- ________ Harleen card START ________  -->
         <div class="card">
           <p class="name">Harleen Singh</p>
