--- a/index.html
+++ b/index.html
@@ -3154,6 +3154,42 @@
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
+        <!-- ________ lukegabriel520 card START ________  -->
+        <div class="card">
+          <p class="name">Luke</p>
+          <p class="contact">
+            <i class="fab fa-linkedin-in"></i>
+            <a href="https://www.linkedin.com/in/lukelumakin/" target="_blank">lukelumakin</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/lukegabriel520" target="_blank">lukegabriel520</a>
+          </p>
+          <p class="about">a happy chap living off life</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a 
+                href="https://www.scrimba.com" 
+                target="_blank" 
+                title="Scrimba">Interactive Learning Site</a>
+              </li>
+              <li>
+                <a 
+                href="https://www.datacamp.com" 
+                target="_blank" 
+                title="DataCamp">Various Certifications</a>
+              </li>
+              <li>
+                <a 
+                href="https://www.youtube.com/@cs50" 
+                target="_blank" 
+                title="CS50">Computer Science Fundamentals</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ lukegabriel520 card END ________  -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
