Add HenintsoaPaul card info

--- a/index.html
+++ b/index.html
@@ -115,6 +115,36 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+                <!-- ________ HenintsoaPaul card START ________  -->
+                <div class="card">
+                  <p class="name">Henintsoa Paul MANITRAJA</p>
+                  <p class="contact">
+                    <!-- No twitter account xD -->
+                    <i class="fab fa-x-twitter"></i>
+                    <a href="#" target="_blank">No twitter account xD</a>
+                    <i class="fab fa-github"></i>
+                    <a href="https://www.github.com/HenintsoaPaul" target="_blank">HenintsoaPaul</a>
+                  </p>
+                  <p class="about">
+                    Akory aby eh! Henintsoa Paul MANITRAJA gne agnarako. Ity zao gne contribution-ko open source voalohany. Tena m'lay be ty projet ty xD. Mazotoa agnaby eh ;)
+                  </p>
+                  <div class="resources">
+                    <p>3 Useful Dev Resources</p>
+                    <ul>
+                      <li>
+                        <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">FreeCodeCamp</a>
+                      </li>
+                      <li>
+                        <a href="https://openclassrooms.com/" target="_blank" title="Second Resource">Open Classroom</a>
+                      </li>
+                      <li>
+                        <a href="https://bytebytego.com/" target="_blank" title="Third resource">ByteByteGo</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- ________ HenintsoaPaul card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
