--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- === Paste YOUR CARD directly BELOW this line ===-->
+         <!--  ________ sovereign card START ________  -->
+         <div class="card">
+          <p class="name">Sovereign</p>
+          <p class="contact">
+            <i class="fa-brands fa-youtube"></i>
+            <a href="https://www.youtube.com/@knghtking" target="_blank">Knight king</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Sov3r3ign" target="_blank">Sovereign</a>
+          </p>
+          <p class="about">Driven by a deep passion for tech that fuses the digital with the human soul. 🚀I thrive in building cool things, exploring futuristic frameworks, and teaming up with curious minds. 🧠✨</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="GeeksforGeeks">GeeksforGeeks</a>
+              </li>
+              <li>
+                <a href="https://www.tutorialspoint.com/" target="_blank" title="tutorialspoint">tutorialspoint</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3Schools">W3schools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Sovereign Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
