--- a/index.html
+++ b/index.html
@@ -183,34 +183,25 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">MartianCactus</p>
+          <p class="name">Saksham Mann</p>
           <p class="contact">
-            <i class="fa-brands fa-google"></i>
-            <a href="https://www.google.com" target="_blank">dont use twitter lol</a>
+            <i class="fab fa-x-linkedin"></i>
+            <a href="https://www.linkedin.com/in/saksham-mann-4a52042a0/" target="_blank">Saksham Mann</a>
             <i class="fab fa-github"></i>
-            <a href="https://github.com/MartianCactus" target="_blank">MartianCactus</a>
+            <a href="https://www.github.com/sekshem" target="_blank">Sekshem</a>
           </p>
-          <p class="about">
-            Hi! Im a data science guy learning some stuff about collaborative development! Dont know much about front
-            end but here are some general learning resources!
-          </p>
+          <p class="about">Hello world! This is my first Open Source contribution!</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://www.khanacademy.org" target="_blank" title="First Resource">Khan Academy</a>
+                <a href="github.com/sekshem" target="_blank" title="GITHUB ACCOUNT">Github</a>
               </li>
               <li>
-                <a href="https://www.fast.ai/" target="_blank" title="Second Resource">Fast AI: Deep Learning</a>
+                <a href="https://www.linkedin.com/in/saksham-mann-4a52042a0/" target="_blank" title="LINKEDIN ACCOUNT">Linkedin</a>
               </li>
               <li>
-                <a
-                  href="https://pll.harvard.edu/course/cs50-introduction-computer-science"
-                  target="_blank"
-                  title="Third resource"
-                >
-                  Harvard CS50x
-                </a>
+                <a href="https://leetcode.com/u/sakshammann/" target="_blank" title="LEETCODE ACCOUNT">Leetcode</a>
               </li>
             </ul>
           </div>
