Add my card information

--- a/index.html
+++ b/index.html
@@ -115,6 +115,35 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Sri Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Sri</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/sowmya-sri-bande/" target="_blank">SowmyaSri</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/sri7889" target="_blank">sri7889</a>
+          </p>
+          <p class="about">
+            Excited to explore new Technologies and continuously learn.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://youtu.be/SDQpAzYsfYk?si=3d9-u969YPZzyj1j" target="_blank" title="youtube">Roadmap</a>
+              </li>
+              <li>
+                <a href="https://discord.com/" target="_blank" title="Discord">Discord:Peer learning</a>
+              </li>
+              <li>
+                <a href="https://www.codecademy.com/resources/cheatsheets/subject/web-development" target="_blank" title="codecademy">codecademy-Code Snippet</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Sri Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
