Add ctrlbandit card info

--- a/index.html
+++ b/index.html
@@ -1135,6 +1135,34 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+            <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">ctrlbandit</p>
+          <p class="contact">
+            <i class="fa-solid fa-envelope"></i>
+            <a href="mailto:yomazre@gmail.com" target="_blank">yomazre@gmail.com</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/ctrlbandit" target="_blank">ctrlbandit</a>
+          </p>
+          <p class="about">Full Stack Developer and I love wolves</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/bradtraversy/design-resources-for-developers" target="_blank" title="Design resources for projects">Design resources for developers</a>
+              </li>
+              <li>
+                <a href="https://github.com/abhisheknaiidu/awesome-github-profile-readme" target="_blank" title="Readme resources">Awesome github profile readme</a>
+              </li>
+              <li>
+                <a href="https://github.com/InterviewReady/system-design-resources" target="_blank" title="Resources for system design">System design resources</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: Warren Smith START ________  -->
         <div class="card">
           <p class="name">Warren Smith</p>
