Added a new card

--- a/index.html
+++ b/index.html
@@ -115,6 +115,38 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+       <!-- ________ Dhrubaraj card START ________  -->
+        <div class="card">
+          <p class="name">Dhrubaraj Pati</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/dhrubaraj-pati/" target="_blank">Dhrubaraj Pati</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/codewithdhruba01" target="_blank">codewithdhruba01</a>
+          </p>
+          <p class="about">
+            I'm a full-stack developer currently working on Open-Source Project.
+            I’ve always been passionate about technology and coding.
+            To pursue my career in tech, I took a proactive approach to self-learning programming.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/codewithdhruba01/Learn-python-language" target="_blank" title="First Resource">Learn Python Beginner to Pro</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Second Resource">Free Code Camp</a>
+              </li>
+              <li>
+                <a href="https://www.notion.so/Frontend-Roadmap-1e6386905be780cca9dfe75ebd8d5cff" target="_blank" title="Third resource">Frontend Roadmap</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      <!-- ________ Dhrubaraj card END ________  -->
+
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
