--- a/index.html
+++ b/index.html
@@ -90,25 +90,25 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Your name</p>
+          <p class="name">Armand Benjamin</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.twitter.com/armandbenjamin" target="_blank">Armand benjamin</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://github.com/BenDev202" target="_blank">BenDev202</a>
           </p>
-          <p class="about">about you</p>
+          <p class="about"> I'm a Full stack developer and Saas developer focused on building impactful tools that improve how people work, learn, and connect through technology.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                 <a href="https://www.freecodecamp.org" target="_blank" title="Learn to code for free">freeCodeCamp</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="https://stackoverflow.com" target="_blank" title="Get answers to your coding questions">Stack Overflow</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="https://www.w3schools.com" target="_blank" title="Web development tutorials">W3Schools</a>
               </li>
             </ul>
           </div>
